@@ -1,3 +1,13 @@
+2009-12-18  Kenneth Russell  <kbr@google.com>
+
+        Reviewed by Darin Fisher.
+
+        Index validation for drawElements examines too many indices
+        https://bugs.webkit.org/show_bug.cgi?id=32692
+
+        * fast/canvas/webgl/bug-32692-expected.txt: Added.
+        * fast/canvas/webgl/bug-32692.html: Added.
+
 2009-12-18  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
 
         Rubber-stamped by Xan Lopez.
